# topcom

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.md  README_ORIGINAL  configure  configure.ac  mkinstalldirs
debian/: README.Debian  TOPCOM-manual.html  changelog  clean  control  copyright  libtopcom-dev.install  manual.tex  rules  topcom-examples.examples  topcom.doc-base  topcom.docs  topcom.manpages  topcom.pc.in  topcom.txt  watch
debian/man/: topcom-B_A.1.in  topcom-B_A_center.1.in  topcom-B_D.1.in  topcom-checkregularity.1.in  topcom-chiro2allfinetriangs.1.in  topcom-chiro2alltriangs.1.in  topcom-chiro2circuits.1.in  topcom-chiro2cocircuits.1.in  topcom-chiro2dual.1.in  topcom-chiro2finetriang.1.in  topcom-chiro2finetriangs.1.in  topcom-chiro2mintriang.1.in  topcom-chiro2nallfinetriangs.1.in  topcom-chiro2nalltriangs.1.in  topcom-chiro2nfinetriangs.1.in  topcom-chiro2ntriangs.1.in  topcom-chiro2placingtriang.1.in  topcom-chiro2triangs.1.in  topcom-cocircuits2facets.1.in  topcom-cross.1.in  topcom-cube.1.in  topcom-cyclic.1.in  topcom-hypersimplex.1.in  topcom-lattice.1.in  topcom-points2allfinetriangs.1.in  topcom-points2alltriangs.1.in  topcom-points2chiro.1.in  topcom-points2facets.1.in  topcom-points2finetriang.1.in  topcom-points2finetriangs.1.in  topcom-points2flips.1.in  topcom-points2nallfinetriangs.1.in  topcom-points2nalltriangs.1.in  topcom-points2nfinetriangs.1.in  topcom-points2nflips.1.in  topcom-points2ntriangs.1.in  topcom-points2placingtriang.1.in  topcom-points2triangs.1.in  topcom-points2volume.1.in  topcom-santos_22_triang.1.in  (+3 more)
debian/patches/: cytools-mod.patch  cytools.patch  dont-build-libraries.patch  dont-install-libs-or-headers.patch  fix-32-bit-build.patch  fix-typo.patch  no-csh.patch  pkg-config.patch  rename-binaries.patch  series  shared-library.patch
debian/source/: options
debian/tests/: control
debian/upstream/: metadata
docker/: Dockerfile  README.md
examples/: 6gonxI.result  A_6_heights.res  D3xD2.result  D3xD2_reg.result  D4xD2.result  D4xD2_reg.result  DkxDl.results  Makefile.am  Makefile.in  SantosTriang_Factor1.poly  SantosTriang_Factor1_ManualSchlegel.poly  SantosTriang_Factor1_Schlegel.jvx  SantosTriang_Factor1_SchlegelTriang.jvx  SantosTriang_Master.poly  SantosTriang_Master_Sym.poly  V_3_3_heights.res  V_3_3_symheights.res  cube_3.chiro  cube_3_dual_reg.results  cube_3_heights.res  cube_4.result  cube_4_dual_reg.results  cube_4_someheights.res  cube_5.chiro  cyclic_13_3.result  cyclic_13_7.result  dodecahedron.chiro  hypersimplex_2_4.results  hypersimplex_2_5.results  hypersimplex_2_6.results  hypersimplex_3_2.results  hypersimplex_6_2.results  hypersimplex_7_2.results  icosahedron.chiro  lattice_4_4.nallfinetriangs.result  lattice_4_4.result  moae_heights.res  r12.chiro  transportation-small.poly
lib-src/: Admissibles.cc  Admissibles.hh  Array.hh  CheckTriang.cc  CheckTriang.hh  Chirotope.hh  Circuits.cc  Circuits.hh  ClassifiedExtensionSymmetries.cc  ClassifiedExtensionSymmetries.hh  ClassifiedSubsetSymmetries.cc  ClassifiedSubsetSymmetries.hh  Cocircuits.cc  Cocircuits.hh  CommandlineOptions.cc  CommandlineOptions.hh  CompressedIntegerSet.cc  CompressedIntegerSet.hh  ComputeCircuits.cc  ComputeCircuits.hh  ComputeCocircuits.cc  ComputeCocircuits.hh  ComputeTriangs.cc  ComputeTriangs.hh  ContainerIO.cc  ContainerIO.hh  Facets.cc  Facets.hh  FastSimplicialComplex.cc  FastSimplicialComplex.hh  Field.cc  Field.hh  FineTriang.cc  FineTriang.hh  Flip.cc  Flip.hh  Global.hh  Graphics.cc  Graphics.hh  HashKey.hh  (+92 more)
lib-src-reg/: LPinterface.cc  LPinterface.hh  Makefile.am  Makefile.in  QSOinterface.cc  QSOinterface.hh  RegularityCheck.cc  RegularityCheck.hh  SPXinterface.cc  SPXinterface.hh
share/: Makefile.am  Makefile.in
share/asy/: Combinatorial_Geometry.asy  TOPCOM_graphics.asy  triangbook_macroes.sty
src/: B_A.cc  B_A_center.cc  B_D.cc  B_D_center.cc  B_S.cc  B_S_center.cc  Dnxk.cc  Makefile.am  Makefile.in  binomial.cc  check.cc  chiro2allfinetriangs.cc  chiro2alltriangs.cc  chiro2circuits.cc  chiro2cocircuits.cc  chiro2dual.cc  chiro2finetriang.cc  chiro2finetriangs.cc  chiro2mintriang.cc  chiro2nallfinetriangs.cc  chiro2nalltriangs.cc  chiro2ncircuits.cc  chiro2ncocircuits.cc  chiro2nfinetriangs.cc  chiro2ntriangs.cc  chiro2placingtriang.cc  chiro2triangs.cc  cocircuits2facets.cc  cross.cc  cube.cc  cyclic.cc  hypersimplex.cc  kDn.cc  lattice.cc  permutahedron.cc  points2allfinetriangs.cc  points2alltriangs.cc  points2chiro.cc  points2circuits.cc  points2cocircuits.cc  (+22 more)
src-reg/: Makefile.am  Makefile.in  checkregularity.cc
wrap-gmp-gmpxx/: Integer.h  Makefile.am  Makefile.in  Rational.h
