EXTRA_DIST =  \
6-gonxI.dat \
6-gonxI.result \
6gon_doublecover.dat \
A_6.dat \
A_6_heights.res \
D1xD1.dat \
D2xD1.dat \
D2xD2.dat \
D3xD1.dat \
D3xD2.dat \
D3xD2.result \
D3xD2_reg.result \
D3xD3.dat \
D4xD1.dat \
D4xD2.dat \
D4xD2.result \
D4xD2_reg.result \
D4xD3.dat \
D5xD2.dat \
D5xD2.result \
D5xD2_reg.result \
D6xD2.dat \
DkxDl.results \
P10.dat \
SantosTriang_Factor1.poly \
SantosTriang_Factor1_ManualSchlegel.poly \
SantosTriang_Factor1_Schlegel.jvx \
SantosTriang_Factor1_SchlegelTriang.jvx \
SantosTriang_Master.poly \
SantosTriang_Master_Sym.poly \
V_3_3.dat \
V_3_3_heights.res \
V_3_3_nosym.dat \
V_3_3_symheights.res \
V_4_2.dat \
V_4_3.dat \
bernd.dat \
cappedprism_checkreg.dat \
cube_2.dat \
cube_2_checkreg.dat \
cube_2_doublecover.dat \
cube_2_dual.dat \
cube_3.chiro \
cube_3.dat \
cube_3_checkreg.dat \
cube_3_doublecover.dat \
cube_3_dual.dat \
cube_3_dual_nosym.dat \
cube_3_dual_reg.results \
cube_3_heights.res \
cube_4.dat \
cube_4.result \
cube_4_dual.dat \
cube_4_dual_reg.results \
cube_4_nosym.dat \
cube_4_someheights.res \
cube_5.chiro \
cyclic_10_4.dat \
cyclic_13_3.result \
cyclic_13_6.result \
cyclic_13_7.result \
cyclic_4_2.dat \
cyclic_5_2.dat \
cyclic_8_4.dat \
cyclic_checkreg.dat \
hypersimplex_2_3.dat \
hypersimplex_2_3.results \
hypersimplex_2_4.dat \
hypersimplex_2_4.results \
hypersimplex_2_5.dat \
hypersimplex_2_5.results \
hypersimplex_2_6.dat \
hypersimplex_2_6.results \
hypersimplex_2_7.dat \
hypersimplex_2_7_interrupted.results \
interiortetra.dat \
lattice_3_3.dat \
lattice_4_4.dat \
lattice_4_4.nallfinetriangs.result \
lattice_4_4.result \
lattice_4_5.dat \
lattice_5_5.dat \
lattice_checkreg.dat \
moae.dat \
moae_checkreg.dat \
moae_heights.res \
r12.chiro \
reiner.dat \
rekha_6x12.dat \
santos_16_triang.dat \
santos_18_triang.dat \
santos_19_triang.dat \
santos_22_triang.dat \
santos_dim4_triang.dat \
santos_dim6_n17.dat \
santos_triang.dat \
santos_triang_factor.dat \
santos_triang_factor1_schlegel.dat \
stackedtetra.dat \
transportation-small.dat \
transportation-small.poly
