lib_LIBRARIES       = libTOPCOM.a

libTOPCOM_a_SOURCES = \
Admissibles.cc \
CheckTriang.cc \
Circuits.cc \
ClassifiedExtensionSymmetries.cc \
ClassifiedSubsetSymmetries.cc \
Cocircuits.cc \
CommandlineOptions.cc \
CompressedIntegerSet.cc \
ComputeCircuits.cc \
ComputeCocircuits.cc \
ComputeTriangs.cc \
ContainerIO.cc \
Facets.cc \
FastSimplicialComplex.cc \
Field.cc \
FineTriang.cc \
Flip.cc \
Graphics.cc \
Incidences.cc \
IndexTableArray.cc \
IntegerSet.cc \
IntegerSet64.cc \
InteriorFacets.cc \
MarkedFlips.cc \
Matrix.cc \
Permutation.cc \
PermutationPartialComparator.cc \
PlacingTriang.cc \
PointConfiguration.cc \
RealChiro.cc \
SimplicialComplex.cc \
SimplicialComplexTemplate.cc \
SparseIntegerSet.cc \
SparseSimplicialComplex.cc \
StairCaseMatrix.cc \
Statistics.cc \
StrictStairCaseMatrix.cc \
StrictStairCaseMatrixTrans.cc \
SwitchTable.cc \
SymmetricFlipGraph.cc \
SymmetricExtensionGraph.cc \
SymmetricExtensionGraphMaster.cc \
SymmetricExtensionGraphNode.cc \
Symmetry.cc \
TriangFlips.cc \
TriangNode.cc \
Vector.cc \
VertexFacetTable.cc \
VertexFacetTableArray.cc \
Vertices.cc \
VirtualChiro.cc \
Volumes.cc

include_HEADERS = \
Admissibles.hh \
Array.hh \
CheckTriang.hh \
Chirotope.hh \
Circuits.hh \
ClassifiedExtensionSymmetries.hh \
ClassifiedSubsetSymmetries.hh \
Cocircuits.hh \
CommandlineOptions.hh \
CompressedIntegerSet.hh \
ComputeCircuits.hh \
ComputeCocircuits.hh \
ComputeTriangs.hh \
ContainerIO.hh \
Facets.hh \
FastSimplicialComplex.hh \
Field.hh \
FineTriang.hh \
Flip.hh \
Global.hh \
Graphics.hh \
HashKey.hh \
HashMap.hh \
HashSet.hh \
Incidences.hh \
IndexTableArray.hh \
IntegerSet.hh \
IntegerSet64.hh \
InteriorFacets.hh \
LabelSet.hh \
MarkedFlips.hh \
Matrix.hh \
Pair.hh \
PartialTriang.hh \
Permutation.hh \
PermutationPartialComparator.hh \
PermlibPermutationGroup.hh \
PlacingTriang.hh \
PlainArray.hh \
PlainHashIndexTable.hh \
PlainHashMap.hh \
PlainHashSet.hh \
PlainHashTable.hh \
PlainLinkedHashTable.hh \
PlainUnlinkedHashTable.hh \
PointConfiguration.hh \
RealChiro.hh \
RefCount.hh \
Simplex.hh \
SimplicialComplex.hh \
SimplicialComplexTemplate.hh \
SimplicialComplexTemplate_Declarations.hh \
SimplicialComplexTemplate_Definitions.hh \
SparseIntegerSet.hh \
SparseSimplicialComplex.hh \
StairCaseMatrix.hh \
Statistics.hh \
StrictStairCaseMatrix.hh \
StrictStairCaseMatrixTrans.hh \
SwitchTable.hh \
SymmetricFlipGraph.hh \
SymmetricExtensionGraph.hh \
SymmetricExtensionGraphMaster.hh \
SymmetricExtensionGraphNode.hh \
SymmetricSubsetGraph.hh \
SymmetricSubsetGraphMaster.hh \
SymmetricSubsetGraphNode.hh \
Symmetry.hh \
TriangFlips.hh \
TriangNode.hh \
Vector.hh \
VertexFacetTable.hh \
VertexFacetTableArray.hh \
Vertices.hh \
VirtualChiro.hh \
Volumes.hh

AM_CPPFLAGS    += -I../lib-src-reg
AM_CPPFLAGS    += -I../wrap-gmp-gmpxx
AM_CPPFLAGS    += -I../external/include
AM_CPPFLAGS    += -I$(includedir)

AM_CPPFLAGS    += -ftemplate-depth=100
